src/Juegardos.Website/wwwroot/css/app.css
/* ... */
@media (min-width: 768px) {
    .hide-on-desktop {
        display: none;
    }

    .navbar {
        padding: 0 200px;
    }
}

.megamenu-toggle {
    display: flex;
    align-items: center;
}

.nav-links li {
    list-style: none;
}

    .nav-links li a {
        color: #f2f2f2;
        text-decoration: none;
        font-size: 18px;
        font-weight: 500;
        padding: 9px 15px;
        border-radius: 5px;
        transition: all 0.3s ease;
    }

        .nav-links li a:hover {
            background: #3A3B3C;
        }

.nav-links .mobile-item {
    display: none;
}

.mega-box {
    position: absolute;
    left: 0;
    width: 100%;
    top: 85px;
    opacity: 0;
    visibility: hidden;
}

    .mega-box.active {
        transition: all 0.3s ease;
        top: 52px;
        opacity: 1;
        visibility: visible;
    }

    .mega-box .content {
        background: var(--primary-normal);
        display: flex;
        justify-content: space-between;
        box-shadow: 0 6px 10px rgba(0,0,0,0.15);
        padding: 0px 400px;
    }

        .mega-box .content .row {
            width: calc(25% - 30px);
            line-height: 45px;
        }

.content .row .mega-links {
    margin-left: -40px;
}

.row .mega-links li {
    padding: 0 20px;
}

    .row .mega-links li a {
        padding: 0 20px;
        display: block;
    }

        .row .mega-links li a:hover {
            color: #f2f2f2;
        }

@media screen and (max-width: 970px) {
    #menu-btn:checked ~ .nav-links {
        left: 0%;
    }

    .mega-box.active {
        max-height: 100%;
    }

    .nav-links .desktop-item {
        display: none;
    }

    .nav-links .mobile-item {
        display: block;
        color: #f2f2f2;
        font-size: 20px;
        font-weight: 500;
        padding-left: 20px;
        cursor: pointer;
        border-radius: 5px;
        transition: all 0.3s ease;
    }

        .nav-links .mobile-item:hover {
            background: #3A3B3C;
        }

    .mega-box {
        position: static;
        top: 65px;
        opacity: 1;
        visibility: visible;
        max-height: 0px;
        overflow: hidden;
        transition: all 0.3s ease;
    }

        .mega-box .content {
            box-shadow: none;
            flex-direction: column;
            padding: 0;
        }

            .mega-box .content .row {
                width: 100%;
            }

    .content .row .mega-links {
        padding-left: 15px;
    }

    .row .mega-links li {
        margin: 0;
    }
}

.modal-backdrop {
    position: fixed;
    top: 0;
    left: 0;
    z-index: -2;
    width: 100vw;
    height: 100vh;
    background-color: #000;
    opacity: 0;
}

    .modal-backdrop.show {
        z-index: 2;
        opacity: .5;
    }

.modal {
    position: fixed;
    top: 0;
    left: 0;
    z-index: -1;
    display: none;
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    outline: 0;
}

    .modal * {
        color: var(--black);
    }

    .modal.show {
        display: block;
        z-index: 3;
    }

.modal-dialog {
    transform: none;
    min-height: calc(100% - 3.5rem);
    max-width: 500px;
    margin: 1.75rem auto;
    display: flex;
    align-items: center;
    position: relative;
    width: auto;
}

.modal-content {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    pointer-events: auto;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0,0,0,.2);
    border-radius: 0.3rem;
    outline: 0;
}

.modal-header {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    justify-content: space-between;
    padding: 1rem 1rem;
    border-bottom: 1px solid #dee2e6;
    border-top-left-radius: calc(0.3rem - 1px);
    border-top-right-radius: calc(0.3rem - 1px);
}

.modal-header > i {
    padding: 10px;
}

    .modal-header > i:hover {
        cursor: pointer;
    }

.modal-title {
    margin-bottom: 0;
    line-height: 1.5;
}

.modal-body {
    position: relative;
    flex: 1 1 auto;
    padding: 1rem;
}

.pagination {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 6px;
    align-items: center;
    margin: 0;
}

    .pagination .page-item:hover {
        cursor: pointer;
    }

    .pagination .page-item.active:hover {
        cursor: default;
    }

    .pagination .page-item .page-link {
        width: 35px;
        height: 35px;
        line-height: 33px;
        text-align: center;
        border-radius: 5px;
        background-color: var(--secondary-normal);
    }

    .pagination .page-item > i {
        color: var(--secondary-normal);
        padding: 5px;
    }

    .pagination .page-item .page-link {
        position: relative;
        display: block;
        color: var(--white);
        text-decoration: none;
    }

    .pagination .page-item.active .page-link {
        background-color: inherit;
    }

.carousel .carousel-posters .wrap:first-child {
    margin-left: 30px;
}

.carousel .carousel-title {
    font-size: 1.3rem;
    font-weight: 600;
    margin-left: 30px;
}

.carousel .carousel-posters {
    display: flex;
    align-items: center;
    overflow-y: hidden;
    overflow-x: scroll;
    transition: 500ms;
    scroll-behavior: smooth;
    margin-bottom: 20px;
}

    .carousel .carousel-posters::-webkit-scrollbar {
        display: none;
    }

.carousel .carousel-poster {
    object-fit: contain;
    height: 100%;
}

.carousel .wrap {
    display: inline-block;
    position: relative;
    height: 150px;
    width: fit-content;
    margin: 0 1px;
    cursor: pointer;
    transition: height 500ms;
}

.carousel .poster-title {
    position: absolute;
    left: 10px;
    bottom: 10px;
}

.carousel .wrap > i {
    position: absolute;
    right: 10px;
    top: 10px;
}
/* ... */

